--- a/src/components/PageHeader.css
+++ b/src/components/PageHeader.css
@@ -22,6 +22,12 @@
   font-size: 1.8rem;
 }
 
+.PageHeader--ImgAttr {
+  font-weight: 400;
+  font-size: 1rem;
+  float: right;
+}
+
 .PageHeader .container {
   animation: fadeIn 0.5s ease-out;
 }
